--- a/src/style.css
+++ b/src/style.css
@@ -508,7 +508,7 @@ canvas {
 }
 
 .comfort-gauge {
-  position: absolute;
+  position: fixed;
   top: 50%;
   right: 18px;
   transform: translateY(-50%);
