Dismantle the vibes - refactor for sanity

--- a/src/style.css
+++ b/src/style.css
@@ -852,11 +852,13 @@ canvas {
 .login-screen--hidden {
   opacity: 0;
   pointer-events: none;
+  z-index: -1;
 }
 
 .login-screen--visible {
   opacity: 1;
   pointer-events: auto;
+  z-index: 100;
 }
 
 .login-screen__card {
